# BlockOut3000

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: README.md
code/: .gitignore  AppState.cpp  Application.cpp  CMakeLists.txt  Figure.hpp  FigureManager.cpp  FigureManager.hpp  FigureSet.hpp  FigureTemplate.cpp  Flat3DPVM.hpp  LayerPreview.cpp  LayerPreview.hpp  Pit.cpp  Preferences.hpp  Primitives.hpp  Random.cpp  Resources_Figures.cpp  SimpleLexer.hpp  State_InGame.hpp  State_Test.cpp  State_Test.hpp
code.old/: AppState.hpp  Application_State.hpp  CubeTemplate.hpp  Figure.cpp  FigureSet.cpp  FigureTemplate.cpp  FigureTemplate.hpp  Flat3DPVM.cpp  Pit.cpp  Pit.hpp  Preferences.cpp  Random.hpp  Resources.cpp  Resources.hpp  SimpleLexer.cpp  State_InGame.cpp
cpm/: get_cpm.cmake  icm.cmake  imgui.cmake  itlib.cmake  rlayout.cmake  sokol.cmake  yama.cmake
game/: App.cpp  App.hpp  AppMode.cpp  AppMode.hpp  AppModePtr.hpp  AppState.cpp  AppState.hpp  AppStatePtr.hpp  BasicPit.cpp  BasicPit.hpp  BlockBuilder.cpp  BlockBuilder.hpp  BlockDefinition.hpp  BlockDefinitionPtr.hpp  BlockManager.cpp  BlockManager.hpp  BlockRegistry.cpp  BlockRegistry.hpp  BlockTemplate.cpp  BlockTemplate.hpp  BlockTemplatePtr.hpp  CMakeLists.txt  Cube.cpp  Cube.hpp  EntryPoint.cpp  LayoutBlockBuilder.cpp  LayoutBlockBuilder.hpp  LayoutBlockTest.cpp  LayoutBlockTest.hpp  LayoutExperimental.cpp  LayoutExperimental.hpp  ModeBlockBuilder.cpp  ModeBlockBuilder.hpp  ModeExperimental.cpp  ModeExperimental.hpp  ModeFatalError.cpp  ModeFatalError.hpp  ModeLayoutTest.cpp  ModeLayoutTest.hpp  ModePanic.cpp  (+28 more)
game/lib/: GUILayout.cpp  GUILayout.hpp  Mesh.cpp  Mesh.hpp  Time.hpp  glsl-prefix.h  imgui.hpp  matrix.hpp  rlayout.cpp  rlayout.hpp  sokol-app.h  sokol-gfx-utils.hpp  sokol-gfx.h  sokol-glue.h  sokol-imgui.cpp  sokol-imgui.hpp  sokol-impl.c  sokol-impl.h  vec2.hpp  vec3.hpp
